--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=springboot-web
 spring.thymeleaf.cache=false
 
-# Base de datos MySQL local
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Mezapineda1993
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# # Base de datos MySQL local
+# spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=Mezapineda1993
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+# # JPA
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.show-sql=true
 
-# Flyway
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.clean-disabled=false
-spring.flyway.baseline-on-migrate=true
+# # Flyway
+# spring.flyway.enabled=true
+# spring.flyway.locations=classpath:db/migration
+# spring.flyway.clean-disabled=false
+# spring.flyway.baseline-on-migrate=true
