--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 spring.application.name=springboot-web
 spring.thymeleaf.cache=false
 
-# # Base de datos MySQL local
-# spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=Mezapineda1993
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ========================
+# CONFIGURACIÓN DE MYSQL
+# ========================
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Mezapineda1993
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# # JPA
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.show-sql=true
+# ========================
+# CONFIGURACIÓN DE JPA / HIBERNATE
+# ========================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# # Flyway
-# spring.flyway.enabled=true
-# spring.flyway.locations=classpath:db/migration
-# spring.flyway.clean-disabled=false
-# spring.flyway.baseline-on-migrate=true
+# ========================
+# OPCIONALES (DEBUG)
+# ========================
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
