--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -69,7 +69,7 @@
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-
+			<!-- dependencia de Hibernate -->
 		<dependency>
 		<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
