--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -63,6 +63,13 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- SQL Server Driver  Esta es una dependencia para SQL Server -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
