--- a/springboot-web/src/main/resources/application.properties
+++ b/springboot-web/src/main/resources/application.properties
@@ -4,16 +4,27 @@ spring.thymeleaf.cache=false
 # ========================
 # CONFIGURACIÓN DE MYSQL
 # ========================
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Mezapineda1993
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/springboot?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=Mezapineda1993
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# ========================
+# CONFIGURACIÓN DE SQL SERVER  Conexion a la base de datos en Somee.com VPS, Conexión a la base de datos SQL Server
+# ========================
+spring.datasource.url=jdbc:sqlserver://springboot.mssql.somee.com:1433;databaseName=springboot;trustServerCertificate=true;encrypt=true
+spring.datasource.username=Marvin_Meza_SQLLogin_1
+spring.datasource.password=i1zei1b245
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # ========================
 # CONFIGURACIÓN DE JPA / HIBERNATE
 # ========================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect En caso de usar MySQL    
+ # Para SQL Server
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 # ========================
 # OPCIONALES (DEBUG)
